--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
       function showPosition(position) {
         california = {lat: position.coords.latitude, lng: position.coords.longitude};
+        alert(position.coords.longitude);
       }
 
       //var california = {lat: 37.4419, lng: -122.1419};
